tests/ui/resolve/issue-81508.stderr
error[E0433]: cannot find type `Baz` in this scope
  --> $DIR/issue-81508.rs:11:20
   |
LL |     println!("{}", Baz::Bar);
   |                    ^^^ `Baz` is declared as a local binding at `issue-81508.rs:9:9`, not a type

error[E0433]: cannot find type `Foo` in this scope
  --> $DIR/issue-81508.rs:20:24
   |
LL |         println!("{}", Foo::Bar);
   |                        ^^^ `Foo` is declared as a constant at `issue-81508.rs:18:9`, not a type

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0433`.
